<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="result_text">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_text">C</string>
    <string name="pos_neg_text">+/-</string>
    <string name="percent_text">%</string>
    <string name="divide_text">÷</string>
    <string name="seven_text">7</string>
    <string name="multiply_text">×</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="four_text">4</string>
    <string name="six_text">6</string>
    <string name="subtract_text">-</string>
    <string name="five_text">5</string>
    <string name="one_text">1</string>
    <string name="three_text">3</string>
    <string name="plus_text">+</string>
    <string name="two_text">2</string>
    <string name="zero_text">0</string>
    <string name="equal_text">=</string>
    <string name="dot_text">.</string>
</resources>